Fixed image card sizing issue on Safari and in weird cases

--- a/files/styles/main-styles.css
+++ b/files/styles/main-styles.css
@@ -181,7 +181,6 @@ button {
 .image-card {
     align-items: center;
     justify-content: center;
-    height: 250px;
 }
 
 .image-card img {
